# GetPapers

./: .gitignore  README.md  pyproject.toml
src/aganitha_papers/get_papers/: __init__.py  export.py  fetch.py  filter.py  utils.py
src/aganitha_papers/scripts/: get_papers_list.py
src/aganitha_papers/tests/: test_basic.py
